Fix suppressed warnings (#4)
* Fix ErrorProne warnings

* Fix Checkstyle warnings